--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@
 on:
   push:
     branches:
-      - "master"
+      - "feature"
 jobs:
   build:
     name: "Deploy on AKS"
@@ -17,17 +17,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Docker Login
-        uses: azure/docker-login@v1
+        uses: docker/docker-login@v1
         with:
-          login-server: ${{ secrets.AZURE_URL }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASS }}
 
-      - name: Build and Push to ACR
+      - name: Build and Push
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.AZURE_URL}}/${{secrets.repo}}:productAPiv1
+          tags: ${{ secrets.ACR_USERNAME}}/${{secrets.repo}}:productAPiv1
           context: ./ProductWebApi
       - name: Kubernetes Set Context
         uses: Azure/k8s-set-context@v3.0
@@ -41,13 +40,14 @@ jobs:
           helmChart: "./k8s/product-chart"
           helm-version: "latest"
           overrides: |
-            imagePath:${{ secrets.AZURE_URL}}/${{secrets.repo}}:productAPiv1
+            imagePath:${{ secrets.ACR_USERNAME}}/${{secrets.repo}}:productAPiv1
             container:${{secrets.container}}
             db:${{secrets.db}}
             connectionString:${{secrets.connectionString}}
+            namespace:${{secrets.namespace}}
         id: bake
       - uses: azure/k8s-deploy@v1
         with:
           manifests: ${{ steps.bake.outputs.manifestsBundle }}
           images: |
-            ${{ secrets.AZURE_URL}}/${{secrets.repo}}:productAPiv1
+            ${{ secrets.ACR_USERNAME}}/${{secrets.repo}}:productAPiv1
