--- a/k8s/product-chart/templates/deployment.yaml
+++ b/k8s/product-chart/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product-api
+  namespace: {{.Values.namespace}}
 spec:
   replicas: 1
   strategy:
@@ -19,7 +20,7 @@ spec:
           image: "{{ .Values.imagePath }}"
           imagePullPolicy: Always
           envFrom:
-            - secretRef:
+            - configMapRef:
                 name: productapisettings
           resources:
             requests:
