--- a/k8s/product-chart/templates/service.yaml
+++ b/k8s/product-chart/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: product-api-svc
+  namespace: {{.Values.namespace}}
 spec:
   ports:
     - protocol: TCP
