--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Docker Login
-        uses: docker/docker-login@v1
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASS }}
@@ -49,5 +49,6 @@ jobs:
       - uses: azure/k8s-deploy@v1
         with:
           manifests: ${{ steps.bake.outputs.manifestsBundle }}
+          namespace: ${{secrets.namespace}}
           images: |
             ${{ secrets.ACR_USERNAME}}/${{secrets.repo}}:productAPiv1
