--- a/ProductWebApi/appsettings.json
+++ b/ProductWebApi/appsettings.json
@@ -10,5 +10,8 @@
     "DatabaseName": "",
     "ProductContainerName": ""
   },
+  "ImageSettings": {
+    "Url": ""
+  },
   "AllowedHosts": "*"
 }
