--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,9 @@ jobs:
             db:${{secrets.db}}
             connectionString:${{secrets.connectionString}}
             namespace:${{secrets.namespace}}
-            allowedHosts:${{secrets.origin}}
+            origin:${{secrets.origin}}
+            frontdoorurl:${{secrets.frontdoorurl}}
+            imageServer:${{secrets.imageServer}}
         id: bake
       - uses: azure/k8s-deploy@v1
         with:
