--- a/k8s/product-chart/templates/config.yml
+++ b/k8s/product-chart/templates/config.yml
@@ -2,8 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: productapisettings
-  namespace: {{.Values.namespace}}
+  namespace: {{.Values.namespace | quote}}
 data:
+  ImageSettings__Url: "{{ .Values.imageServer }}"
   DataAccessClientSettings__ProductContainerName: "{{ .Values.container }}"
   DataAccessClientSettings__DatabaseName: "{{ .Values.db }}"
   DataAccessClientSettings__ConnectionString: "{{ .Values.connectionString }}"
