--- a/k8s/product-chart/templates/deployment.yaml
+++ b/k8s/product-chart/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: product-api
-  namespace: {{.Values.namespace}}
+  namespace: {{.Values.namespace | quote}}
 spec:
   replicas: 1
   strategy:
