--- a/k8s/product-chart/templates/hpa.yaml
+++ b/k8s/product-chart/templates/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: product-api-hpa
-  namespace: {{.Values.namespace}}
+  namespace: {{.Values.namespace | quote}}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
