--- a/k8s/product-chart/templates/service.yaml
+++ b/k8s/product-chart/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: product-api-svc
-  namespace: {{.Values.namespace}}
+  namespace: {{.Values.namespace | quote}}
 spec:
   ports:
     - protocol: TCP
