--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
             connectionString:${{secrets.connectionString}}
             namespace:${{secrets.namespace}}
             origin:${{secrets.origin}}
-            frontdoorurl:${{secrets.frontdoorurl}}
+            frontDoorUrl:${{secrets.frontDoorUrl}}
             imageServer:${{secrets.imageServer}}
         id: bake
       - uses: azure/k8s-deploy@v1
